# numbered-titles-sorter

./: .gitignore  Cargo.toml  README.md
example_documents/: example_1.txt  example_2.txt  processed_example_1.txt  processed_example_2.txt
src/: file_reader.rs  file_writer.rs  main.rs  numbered_titles_sorter.rs
src/numbered_titles_sorter/: line_processor.rs  subtitle_corrector.rs  title_corrector.rs  title_finder.rs  title_node.rs  title_pattern_generator.rs
